2005-12-27  Christian Biesinger  <cbiesinger@web.de>

	* test/mask-beos-rgb24-ref.png:
	* test/mask-beos_bitmap-argb32-ref.png:
	* test/mask-beos_bitmap-rgb24-ref.png:
	* test/set-source-beos-rgb24-ref.png:
	* test/set-source-beos_bitmap-rgb24-ref.png:
	* test/trap-clip-beos-rgb24-ref.png:
	* test/trap-clip-beos_bitmap-rgb24-ref.png:

	Add BeOS-specific reference images for tests where the maximum color
	difference is 1.

2005-12-27  Christian Biesinger  <cbiesinger@web.de>

	* src/cairo-beos-surface.cpp: Implement composite for the beos
	backend. Don't map CAIRO_OPERATOR_ADD to B_OP_ADD for now,
	something's broken there.

2005-12-26  Christian Biesinger  <cbiesinger@web.de>

	* src/cairo-beos-surface.cpp: Don't require that the caller locks
	the view; do it in cairo code.
	* test/cairo-test-beos.cpp: Remove the now-unneeded locking

2005-12-21  Carl Worth  <cworth@cworth.org>

	* src/cairo-ps-surface.c: Remove some unneeded backend functions
	(composite, fill_rectangles, composite_trapezoids,
	old_show_glyphs).

2005-12-21  Carl Worth  <cworth@cworth.org>

	* src/test-meta-surface.c:
	* src/cairo-paginated-surface.c: Don't implement create_similar
	for the test-meta or the paginated surface. This was slowing
	things down a _lot_ (about 11× for the mask test for example)
	without any improvement in output quality. We can revisit this
	again later if there's any output improvement to be had down the
	road.

2005-12-21  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am:
	* src/cairo-paginated-surface-private.h:
	* src/cairo-paginated-surface.c: (_cairo_paginated_surface_create),
	(_cairo_paginated_surface_create_similar),
	(_cairo_paginated_surface_finish),
	(_cairo_paginated_surface_acquire_source_image),
	(_cairo_paginated_surface_release_source_image),
	(_cairo_paginated_surface_show_page),
	(_cairo_paginated_surface_intersect_clip_path),
	(_cairo_paginated_surface_get_extents),
	(_cairo_paginated_surface_paint), (_cairo_paginated_surface_mask),